fixed blackbar flickering 0 sized logo on chromium

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,18 +1,23 @@
 :root{
     --bar-height: 4em;
-    --delay: 250ms;
+    --delay: 350ms;
 }
 
 .logo {
-    margin: 0.02em;
+    position: absolute;
+    
+    border: 2px solid red; 
     padding: 0;
-    font-size: 3.5em;
+    font-size: 2em;
 
-    height: calc(var(--bar-height)-1em);
+    top: 10%;
+    height: 100%;
     max-height: var(--bar-height);
 }
 
 .nav-header {
+    height: 4em;
+
     background-color: var(--highlight-color);
     text-align: center;
 
